# python-zope-testrunner

./: .meta.toml  .pre-commit-config.yaml  CHANGES.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml
src/zope/testrunner/tests/: test_xml_output.py  testrunner-colors.rst  testrunner-debugging.rst  testrunner-edge-cases.rst  testrunner-subunit.rst
