# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 81",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "zope.testrunner"
version = "8.3.dev0"
description = "Zope testrunner script."
license = "ZPL-2.1"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Zope :: 3",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Zope Foundation and contributors",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "zope.exceptions",
    "zope.interface",
]

[project.scripts]
zope-testrunner = "zope.testrunner:run"

[project.optional-dependencies]
test = ["zope.testing"]
subunit = [
    "python-subunit >= 1.4.3",
    "testtools >= 0.9.30",
]
docs = [
    "Sphinx",
    "sphinxcontrib-programoutput",
]

[project.urls]
Source = "https://github.com/zopefoundation/zope.testrunner"
Issues = "https://github.com/zopefoundation/zope.testrunner/issues"
Changelog = "https://github.com/zopefoundation/zope.testrunner/blob/master/CHANGES.rst"

[tool.coverage.run]
branch = true
source = ["zope.testrunner"]

[tool.coverage.report]
fail_under = 84.4
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "docs/getting-started.rst", "CHANGES.rst"]}
